cmake_minimum_required(VERSION 3.21)
project(Effective_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(effective5 effective5.cpp)
add_executable(effective6 effective6.cpp)
add_executable(effective7 effective7.cpp)
add_executable(effective8 effective8.cpp)
add_executable(effective9 effective9.cpp)
add_executable(effective10 effective10.cpp)
add_executable(effective11 effective11.cpp)
add_executable(effective12 effective12.cpp)
add_executable(effective13 effective13.cpp)